--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -85,19 +85,37 @@
       <div>
         <i class="fas fa-code"></i>
           <h2>Web Developer</h2>
-          <p>Description......</p>
+          <p>
+           <li>As a software developer, I have a passion for learning new technologies and constantly improving my skills. I have experience working with a wide range of technologies, including JavaScript, Java, SpringBoot, HTML, CSS, Axios, Express, CORS, SQL, Figma, and JWT.</li> 
+
+          <li>I have used these technologies to build a variety of projects, including web-based applications, mobile apps, and APIs. I am comfortable working on both front-end and back-end development tasks, and have a strong understanding of how to design and implement user-friendly and performant applications.</li>  
+            
+           <li> In addition to my technical skills, I have strong communication and problem-solving skills, and am able to work effectively in both team and solo environments. I am constantly seeking out new challenges and opportunities to learn and grow as a developer.</li>
+          </p>
           <a href="#">Learn More</a>
       </div>
       <div>
         <i class="fa-solid fa-school"></i>
         <h2>Middle School Science and PLTW Teacher</h2>
-        <p>Description......</p>
+        <p>
+          <li>Provided additional guidance and support to struggling students to strengthen their understanding of various topics</li> 
+          <li> Maintained accurate and updated records of student performance and progress</li> 
+           <li>Prepared students to achieve their goals by guiding them through the eCybermission club </li> 
+          <li>Skillfully made students Master Map Testing</li> 
+         <li>Collaborated with other subject teachers to maintain a positive relationship with all students, colleagues, and parents</li>  
+        </p>
         <a href="#">Learn More</a>
     </div>
     <div>
       <i class="fa-solid fa-dna"></i>
       <h2>High School Biology and PLTW Teacher</h2>
-      <p>Description......</p>
+      <p>
+        <li>Provided answers to students by identifying problems, researching answers, and guiding students through corrective steps. Handled trouble tickets with support interventions for urgent issues</li>
+        <li>Identified and escalated priority issues per students specifications.</li>
+        <li>Cooperated with students to share my knowledge and provide guidance to them throughout the season.</li>
+        <li>Provided extensive support to the team with subject matter expertise on an as-needed basis.</li>
+        <li>Participated and contributed on a weekly basis during the program season. </li>
+      </p>
       <a href="#">Learn More</a>
   </div>
     </div>
