--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Portfolio</title>
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/e7f183e8cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -17,8 +17,8 @@
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Projects</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#services">Experiences</a></li>
+          <li><a href="#portfolio">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
           <i class="fas solid fa-circle-xmark" onclick="closemenu()"></i>
         </ul>
@@ -80,7 +80,7 @@
 <!-- ------------services------- -->
 <div id="services">
   <div class="container">
-    <h1 class=sub-title>My Services</h1>
+    <h1 class=sub-title>Experiences</h1>
     <div class="service-list">
       <div>
         <i class="fas fa-code"></i>
@@ -124,7 +124,7 @@
 <!-- -------portfolio----------- -->
 <div id="portfolio">
   <div class="container">
-    <h1 class="sub-title">My Work</h1>
+    <h1 class="sub-title">Projects</h1>
     <div class="work-list">
       <div class="work">
         <img src="images/projectpic.PNG" alt="Rating past Presidents">
