--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="images/mylogo.PNG" class="logo" style=width:200px>
+        <img src="mylogo.PNG" class="logo" style=width:200px>
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="about-col-1">
-        <img src="images/pic.jpg" style= width:500px alt="user pic">
+        <img src="pic.jpg" style= width:500px alt="user pic">
       </div>
       <div class="about-col-2">
         <h1 class="sub-title">About Me</h1>
@@ -127,7 +127,7 @@
     <h1 class="sub-title">Projects</h1>
     <div class="work-list">
       <div class="work">
-        <img src="images/projectpic.PNG" alt="Rating past Presidents">
+        <img src="projectpic.PNG" alt="Rating past Presidents">
         <div class="layer">
           <h3>"Rate the Presidents" Website</h3>
           <p>This wbesite allows users to rate past presidents on a scale of 1 to 5 based on their overall performance and to leave comments explaining their ratings.</p>
@@ -135,7 +135,7 @@
         </div>
       </div>
       <div class="work">
-        <img src="images/logo2.PNG" alt="Rating past Presidents">
+        <img src="logo2.PNG" alt="Rating past Presidents">
         <div class="layer">
           <h3>Under the Construction</h3>
           <p>Will come soon...</p>
@@ -158,7 +158,7 @@
           <a href="https://github.com/hkacer"><i class="fa-brands fa-github"></i></a>
           <a href=""><i class="fa-brands fa-twitter"></i></a>
         </div>
-        <a href="images/Hatice-Kaymaz-Resume.pdf" class="btn btn2">Download Resume</a>
+        <a href="Hatice-Kaymaz-Resume.pdf" class="btn btn2">Download Resume</a>
 
       </div>
       <div class="contact-right">
