project url updated

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="layer">
           <h3>"Rate the Presidents" Website</h3>
           <p>This wbesite allows users to rate past presidents on a scale of 1 to 5 based on their overall performance and to leave comments explaining their ratings.</p>
-          <a href="#" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          <a href="https://watch.screencastify.com/v/9fh1cBjXKuFZ0XDGUSoF" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
         </div>
       </div>
       <div class="work">
